added visual design to css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <meta charset="UTF-8">
 <title>Thomas Harris Book Club Form</title>
 <link href="css/general.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
-	<h1>Thomas Harris Book Club</h1>
-	<h2>Registration Form</h2>
+	<img src="img/deathsheadhawkmoth.svg" alt="vector graphic of a Death's-head Hawkmoth" class="hawkmoth">
+	<h1>Registration Form</h1>
+	<h2>Thomas Harris Book Club</h2>
+		
 	<form>
 		<label for="name">Name
 			<strong class="error">Please enter your name</strong>
@@ -106,9 +110,11 @@
 			
 			<input type="radio" id="extremegood" name="satisfaction">
 			<label for="extremegood">I love it</label>
-		</fieldset>	
+		</fieldset>
+	
 		
 	<button type="submit">Submit Form</button>
 	</form>	
+
 </body>
 </html>
