corrected an html error

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<h2>Thomas Harris Book Club</h2>
 		
 	<form>
+		<div>
 		<label for="name">Name
 			<strong class="error">Please enter your name</strong>
 			</label>
