fixed parse errors when validating css and html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div>
 			<label for="province">Province/Territory</label>
 			<select id="province">
-				<option></option>
+				<option>--Select--</option>
 				<option>Québec</option>
 				<option>British Columbia</option>
 				<option>Ontario</option>
@@ -75,13 +75,13 @@
 		
 		<div>
 			<label for="books">How many books have you read this year?</label>
-			<input type="number" id="books" pattern="[0-9]*" min="0">
+			<input type="number" id="books" min="0">
 		</div>
 		
 		<div>
 			<label for="vote">Which book do you vote we start with?</label>
 			<select id="vote">
-				<option></option>
+				<option>--Select--</option>
 				<option>Red Dragon (1981)</option>
 				<option>The Silence of the Lambs (1988)</option>
 				<option>Hannibal (1999)</option>
